testsuite/tests/indexed-types/should_compile/T8002.hs
{-# LANGUAGE Haskell2010 #-}
{-# LANGUAGE TypeFamilies #-}
module T8002 where

import T8002a
