testsuite/tests/indexed-types/should_fail/BadFamInstDecl_aux.hs
{-# LANGUAGE TypeFamilies #-}
module BadFamInstDecl_aux where

type family T a
